--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint .",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "lint:fix": "eslint --fix src/",
     "format": "prettier --write \"./src\"",
-    "run-all": "npm-run-all --parallel test lint:fix",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "run-all": "npm-run-all --parallel test lint:fix"
   },
   "lint-staged": {
     "*.js": [
