--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jobby-app",
   "private": true,
   "version": "1.0.0",
-  "homepage": "https://monenarendra.github.io/Jobby-App/",
+  "homepage": "https://monenarendra.github.io/jobby-app",
   "engines": {
     "node": "^10.13 || 12 || 14 || 15",
     "npm": ">=6"
