--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "1.0.0",
   "homepage": "https://monenarendra.github.io/Jobby-App/",
+  "engines": {
+    "node": "^10.13 || 12 || 14 || 15 || 20.15.1",
+    "npm": ">=6"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
